--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title></title>
     <script src="engine.js"></script>
     <script src="rules.js"></script>
+    <link rel="stylesheet" href = "style.css">
+
 </head>
 <body>
 </body>
