--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="engine.js"></script>
     <script src="rules.js"></script>
     <link rel="stylesheet" href = "style.css">
+    <script>
+    </script>
 
 </head>
 <body>
